[tool.poetry]
name = "download-unifi-marketing-images"
version = "0.1.0"
description = ""
authors = ["JÄgaro Bhikkhu <jagaro@abhayagiri.org>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
aiofiles = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
